gitops/manifests/bichon/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bichon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bichon
  namespace: bichon
  labels:
    app.kubernetes.io/name: bichon
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bichon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bichon
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      enableServiceLinks: false
      containers:
        - name: bichon
          image: rustmailer/bichon:1.3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 15630
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 384Mi
            limits:
              cpu: 250m
              memory: 600Mi
          volumeMounts:
            - mountPath: /data
              name: bichon-data
      restartPolicy: Always
      volumes:
        - name: bichon-data
          persistentVolumeClaim:
            claimName: bichon-data
---
apiVersion: v1
kind: Service
metadata:
  name: bichon
  namespace: bichon
  labels:
    app.kubernetes.io/name: bichon
spec:
  ports:
    - name: bichon
      port: 15630
      targetPort: 15630
  selector:
    app.kubernetes.io/name: bichon
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bichon-internal
  namespace: bichon
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bichon.local.timmybtech.com`)
      kind: Rule
      services:
        - name: bichon
          port: 15630
  tls:
    secretName: local-timmybtech-com-tls
